--- a/css/body-style-1.css
+++ b/css/body-style-1.css
@@ -1,5 +1,5 @@
 body {
     background-color: black;
-    border-left: 400;
-    border-right: 400;
+    padding-left: 500;
+    padding-right: 500;
 }
