--- a/css/body-style-1.css
+++ b/css/body-style-1.css
@@ -1,5 +1,5 @@
 body {
     background-color: black;
-    padding-left: 500;
-    padding-right: 500;
+    padding-left: 500px;
+    padding-right: 500px;
 }
