--- a/css/util.css
+++ b/css/util.css
@@ -7,6 +7,10 @@
     color: #ffffff;
 }
 
+.char_green {
+    color:yellowgreen;
+}
+
 /* define table design */
 .orange_table {
     border-color: salmon;
