--- a/css/util.css
+++ b/css/util.css
@@ -22,6 +22,28 @@
     color: #2a9fa3a8;
 }
 
+/* something */
+.outer {
+    border : 5px solid orange
+}
+
+.box {
+    padding: 10px;
+    width: calc(90% - 30 px);
+    background-color: rebeccapurple;
+    color:white;
+}
+
 /* over ride */
 li {
+}
+
+/* specified tag */
+p.speAAA {
+    color:green;
+}
+
+.speBBB:hover {
+    color: white;
+    background-color: gold;
 }
